--- a/front-end/.env
+++ b/front-end/.env
@@ -1,2 +1,3 @@
-BACKEND_SERVER_URL = 'http://localhost:8000/api'
-BACKEND_SERVER_URL_PROD = 'https://example.com/api'
+VITE_API = http://localhost:8080/api
+VITE_URL = http://localhost:5173
+VITE_BACKEND_SERVER_URL_PROD = https://example.com/api
